WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170499
[GTK+] PNG animations that should run once are not played at all
https://bugs.webkit.org/show_bug.cgi?id=170499
Summary
[GTK+] PNG animations that should run once are not played at all
Miguel Gomez
Reported
2017-04-05 02:14:22 PDT
The problem is the repetition count that is being returned from PNGImageDecoder.
Attachments
Patch
(2.63 KB, patch)
2017-04-05 02:19 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Patch
(2.69 KB, patch)
2017-04-05 02:26 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2017-04-05 02:19:20 PDT
Created
attachment 306274
[details]
Patch
Miguel Gomez
Comment 2
2017-04-05 02:26:50 PDT
Created
attachment 306275
[details]
Patch
WebKit Commit Bot
Comment 3
2017-04-05 03:09:14 PDT
Comment on
attachment 306275
[details]
Patch Clearing flags on attachment: 306275 Committed
r214939
: <
http://trac.webkit.org/changeset/214939
>
WebKit Commit Bot
Comment 4
2017-04-05 03:09:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug